fix color cache error as open dark mode

--- a/GaiaXAndroidDemo/app/src/main/assets/assets_data_source/templates/gx-horizontal-item/index.css
+++ b/GaiaXAndroidDemo/app/src/main/assets/assets_data_source/templates/gx-horizontal-item/index.css
@@ -3,6 +3,7 @@
   height:100%;
   padding-left: 18px;
   padding-right: 18px;
+  background-color: gaiax_color;
 }
 
 #cover-img {
